--- a/.travis.yml
+++ b/.travis.yml
@@ -6,3 +6,6 @@ services:
  - docker
 
 before_script: pip install docker-compose
+
+script:
+ - docker-compose ruin app sh -c "python manage.py test && flake8"
