--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,7 @@
 {
-    "python.pythonPath": "/opt/miniconda3/bin/python"
+    "python.pythonPath": "/home/berni/.conda/envs/py37/bin/python",
+    "python.analysis.extraPaths": [
+        "./app",
+        "./user"
+    ]
 }
