--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,9 +20,11 @@ services:
    - db
  db:
   image: postgres:10-alpine
+  ports:
+  - "5432:5432"
   environment:
-   - POSTGRES_DB=app
+   - POSTGRES_DB=postgres
    - POSTGRES_USER=postgres
-   - POSTGRES_PASSWORD= mypassword
+   - POSTGRES_PASSWORD=mypassword
 
     
